A whole lot of refactoring concerning deprecated method calls, generics, lists, hashtables and for loops